--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> El titulo del post </title>
+        <title> Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -12,7 +12,15 @@
             <div id="post">
                 <h1> Este es el título atractivo e interesante del post</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
-                
+                    <p>
+                        Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. No lo eres... Por ahora.
+                    </p>
+                <p>
+                    Suscribete y dale like
+                </p>
+            </div>
+            <div id="footer">
+                Hecho con amor en platzi <3
             </div>
         </div>
     </body>
