--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenesproyecto/descarg.jpg"/>
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1> Este es el título atractivo e interesante del post</h1>
