Cambio de logo del post

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div  id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenesproyecto/descarg.jpg"/>
+                <img id="logo" src="imagenesproyecto/descarga.png"/>
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
