--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,10 @@
             <div id="post">
                 <h1> Este es el título atractivo e interesante del post</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
+                        <p><a href= "https://imgur.com/a/Vkoeq9l">
+                            <img src="https://i.imgur.com/a/Vkoeq9l.jpg" width="100%" title="descripcion de la imagen"
+                        </a>
+                        </p>
                     <p>
                         Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. No lo eres... Por ahora.
                     </p>
